--- a/src/components/Header/RoofSection.css
+++ b/src/components/Header/RoofSection.css
@@ -1,10 +1,14 @@
 .roof-section{
     position: absolute;
-    text-align: center;
-    
+    max-width: none;
     color: white;
-    z-index: 5;
+    z-index: 1050;
 }
+
+.roof-section h1, h3, a{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
 .btn{
     background-color: #B01F22
 }
